# GMTK2023

./: CMakeLists.txt  flake.nix  run.sh
assets/: Music.mmpz  Painting.ase  Tutorial.ase  Wall.ase  Window.ase
src/: Assets.cpp  Assets.h  Event.cpp  Event.h  Events.cpp  Events.h  Game.cpp  Game.h  Meters.cpp  Meters.h  State.h  TextWrap.cpp  TextWrap.h  main.cpp  rl.h
